plugins {
    id 'org.springframework.boot' version '3.4.4'  // 4.x → 3.x로 변경
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'
description = 'gersangtrade'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'  // ✅
    implementation 'org.springframework.boot:spring-boot-starter-web'            // ✅
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'

    // JWT (jjwt 0.12.x — Spring Boot 4 / Java 21 호환)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Bean Validation (요청 DTO @Valid 검증)
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // QueryDSL 5 — Jakarta EE (Spring Boot 4 호환)
    def querydslVersion = '5.1.0'
    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    // jOOQ (ranked 검색, 집계 쿼리용)
    implementation 'org.springframework.boot:spring-boot-starter-jooq'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'       // ✅ @WebMvcTest 포함 (Spring Boot 3)
    testImplementation 'org.springframework.security:spring-security-test'       // ✅
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // 캐시 (Caffeine — 정적 카탈로그 데이터 JVM 인메모리 캐시)
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine'

    // HTML 크롤링 (geota, gerniverse 정적 HTML 파싱)
    implementation 'org.jsoup:jsoup:1.17.2'

    // AWS SDK v2 S3 (아이템/용병 이미지 업로드)
    implementation platform('software.amazon.awssdk:bom:2.25.0')
    implementation 'software.amazon.awssdk:s3'

    // Jackson Databind (JsonNode, ObjectMapper — spring-boot-starter-web 전이 의존성 미보장 시 명시)
    implementation 'com.fasterxml.jackson.core:jackson-databind'

}


// QueryDSL Q클래스 생성 경로를 소스셋에 포함
sourceSets {
    main {
        java {
            srcDirs += "$buildDir/generated/sources/annotationProcessor/java/main"
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
